Bizfi Production/src/objects/Email_Content__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Sales__c</fullName>
        <label>Credit Card Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Declined__c</fullName>
        <label>Date Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Sales__c</fullName>
        <label>Gross Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Email Content</relationshipLabel>
        <relationshipName>Email_Content</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner_Direct_Phone__c</fullName>
        <label>Owner Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reason_for_Decline__c</fullName>
        <label>Reason for Decline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Business__c</fullName>
        <label>Time in Business</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_of_Proceeds__c</fullName>
        <label>Use of Proceeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal__c</fullName>
        <label>Zip/Postal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Email Content</label>
    <nameField>
        <displayFormat>ECN-{000000}</displayFormat>
        <label>Email Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>